# mini_turtle_00_task-

./: README.md  main.py  pyproject.toml
mini_turtle_oo/: __init__.py
mini_turtle_oo_task/: README.md  pyproject.toml
mini_turtle_oo_task/mini_turtle_oo/: turtle_class.py
