# pyproject.toml

[build-system]

requires = ["setuptools>=61.0", "wheel"] 
build-backend = "setuptools.build_meta"

[project]
# --- Metadatos del Paquete ---
name = "mini_turtle_oo_task"      
version = "1.0.0"                  
description = "Implementación orientada a objetos "
readme = "README.md"
authors = [
    name = "natalia amaya"
]
license = {text = "MIT License"}   # O especificar un archivo `LICENSE`
keywords = ["geometría", "calculadora", "utilidades"]

# Clasificadores que ayudan a la gente a encontrar el paquete en PyPI
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta", # Indica que no es completamente final
]

# Dependencias (si su paquete necesitara numpy, se listaría aquí)
dependencies = [
    # En este caso, solo necesitamos la librería estándar math, no hay dependencias externas
]

[project.urls]
Homepage = https://github.com/nataliaamaya-collab/mi-primera-pagina/tree/main